# loop-engine-cpp-olap-db

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  README.md  build.sh
apps/: strata_cli.cpp
bench/: bench_scan.cpp
bindings/: strata_py.cpp
data/: README.md
include/strata/: column.hpp  dictionary.hpp  executor.hpp  memtable.hpp  parser.hpp  schema.hpp  sql.hpp  table.hpp  threadpool.hpp
python/: dashboard.py  demo.py
src/: executor.cpp  memtable.cpp  parser.cpp  sql.cpp  table.cpp  threadpool.cpp
tests/: test_strata.cpp
tools/: fetch_criteo.sh  gen_synthetic.py
